--- a/css/reset.css
+++ b/css/reset.css
@@ -1,10 +1,16 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
+
 
 img {
     max-width: 100%;
     height: auto;
     box-sizing: border-box;
+}
+
+input::placeholder {
+    font-family: inherit;
 }
