--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,117 @@
 @import 'reset.css';
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 :root {
-    --clr-priamry: #EE8B8B;
+    --clr-primary: #EE8B8B;
     --clr-primary-gradient:linear-gradient(135deg, #F8BFBF 0%, #EE8B8B 100%);
     --clr-secondary:#EE8B8B;
     --clr-dark: #423A3A;
     --clr-light: #ffffff;
+    --clr-light-gradient: linear-gradient(28deg, #FFF1F1 0%, #FFFFFF 100%);
+}
 
+body{
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .page-wrapper {
     display:flex;
     min-height: 100vh;
-    background-color:
+
 }
 
 .left-side {
     flex: 2 0 0;
-    background: var(--clr-primary-gradient);
+    /*background: var(--clr-primary-gradient);*/
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    padding: 75px;
 }
 
 .right-side{
-    flex: 1 0 0;
+    /*flex: 1 0 0;*/
+    height: 100vh;
+    aspect-ratio: 610/800;
+    background-image: url('../images/main.model.png');
+    background-size: cover;
+    background-position: center;
+}
+.left-side-inner{
+
+    max-width:445px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 133px;
+}
+
+.logo-wrapper{
+    display: flex;
+    align-items: center;
+    gap: 11px;
+}
+
+
+.text-container{
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+
+}
+.text-container h1{
+    text-transform: uppercase;
+    font-size: 64px;
+    font-weight: 600;
+    letter-spacing: 17px;
+    line-height: 71px;
+
+
+}
+.text-container h1 span{
+    color:var(--clr-secondary) ;
+    font-weight: 300;
+
+}
+
+.text-container p{
+    color: var(--clr-secondary);
+    font-size: 16px;
+    line-height: 28px;
+    font-weight: 400;
+
+}
+label{
+    display: block;
+    width: 100%;
+}
+input{
+    min-height: 56px;
+    border-radius: 999px;
+    width: 100%;
+    border: 1px solid var(--clr-secondary);
+    padding-left: 32px;
+}
+
+form.newsletter{
+    display: flex;
+}
+
+input::placeholder{
+    color: var(--clr-secondary);
+}
+input:focus{
+    outline-color:var(--clr-primary) ;
+}
+.single-submit{
+    width: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--clr-primary-gradient);
+    border: none;
+    cursor: pointer;
+    border-radius: 999px;
+    margin-left: -100px;
+    box-shadow: 0px 15px 20px 0px rgba(198, 110, 110, 0.25);
+
 }
